Setup fullpage and basic styles

--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html>
 	<head>
 		<title>Wendrom</title>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/third-party/jquery.fullPage.css">
+		<script src="assets/javascripts/third-party/jquery.js"></script>
+		<script src="assets/javascripts/third-party/jquery.fullPage.min.js"></script>
+		<script src="assets/javascripts/main.js"></script>
 	</head>
 	<body>
-		Welcome to my github page
+		<div id="fullpage">
+			<div class="section active">
+				intro
+			</div>
+			<div class="section">
+				fritillo
+			</div>
+			<div class="section">
+				identity
+			</div>
+		</div>
 	</body>
 </html>
