Modify front page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 	<body>
 		<div id="fullpage">
 			<div class="section active">
-				intro
+				<div class="content">
+					<h2><img src="assets/images/logo.png"> wendrom.github.io</h2>
+					<p>
+						My name is <b>Austin Lee</b> and I enjoy creating graphics, applications and games.
+						
+					</p>
+				</div>
 			</div>
 			<div class="section">
 				fritillo
