Add meta tag for mobile scaling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="assets/javascripts/third-party/jquery.js"></script>
 		<script src="assets/javascripts/third-party/jquery.fullPage.min.js"></script>
 		<script src="assets/javascripts/main.js"></script>
+		<meta content="width=device-width, user-scalable=false, initial-scale=1" name="viewport">
 	</head>
 	<body>
 		<header>
