Changed buttons and stylings

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 						Fritillo is an online community and creative platform for people who
 						love to make, collaborate, share and publish stories.
 					</p>
-					<a href="http://fritillo.com" class="demo">Go to website</a>
+					<a href="http://fritillo.com" class="demo">Go to old website (PHP)</a>
+					<a href="http://dragon.fritillo.com" class="demo">Go to alpha version (ROR)</a>
 				</div>
 				<div class="background">
 					<!--<img src="">-->
