--- a/projects/gemjam/index.html
+++ b/projects/gemjam/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>Gem Jam!</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <style>
+          body {
+            font: normal 16px/160% Verdana;
+          }
+        </style>
     </head>
     <body style="width: 480px; margin: 15px auto;">
         <h1>Gem Jam</h1>
@@ -14,7 +19,8 @@
             needed to experience game play. For testing purposes I may alter how
             the game works without warning as this version is the same one I use
             when trying to improve the game. <b>This game must be connected to
-            the Internet in order for it to load puzzles.</b>
+            the Internet in order for it to load puzzles.</b> So if you download
+            it, it will not play offline.
         </p>
         <h2>Requirements</h2>
         <p>
