--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						A puzzle game where you put gems in their proper places. The only
 						trick is they must all move together according to column and row.
 					</p>
-					<a href="projects/gemjam/android/Gem_Jam_v0_1a.apk" class="demo" target="_blank">Get Alpha Demo for Android</a>
+					<a href="http://fritillo.com/Gem_Jam_v0_1a.apk" class="demo" target="_blank">Get Alpha Demo for Android</a>
 				</div>
 				<div class="background">
 					<!--<img src="">-->
