New design elements

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 ---
 layout: default
+title: Felix
+background: /assets/img/background.png
 ---
+
+<p class="main">
+	I am Austin <em>"Felix"</em> Lee. I create digital things including <em>web applications</em>, <em>games</em>, and <em>art</em>. My style is simplistic and functional. When I am not roaming the digital realm, I am either writing a novel, playing the ukulele or drawing.
+</p>
