--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ background: /assets/img/background.png
 ---
 
 <p class="main">
-	I am Austin <em>"Felix"</em> Lee. I create digital things including <em>web applications</em>, <em>games</em>, and <em>art</em>. My style is simplistic and functional. When I am not roaming the digital realm, I am either writing a novel, playing the ukulele or drawing.
+	I am Austin <em>"Felix"</em> Lee. I create digital things including <em>web applications</em>, <em>games</em>, and <em>art</em>. My style is minimalistic and functional. When I am not roaming the digital realm, I am either writing a novel, playing the ukulele or drawing.
 </p>
