--- a/downloads.html
+++ b/downloads.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Projects
+title: Downloads
 background: /assets/img/background.png
 ---
 
 <header class="title">
-	Projects
+	Downloads
 </header>
