--- a/work.html
+++ b/work.html
@@ -1,9 +1,16 @@
 ---
 layout: default
-title: Projects
+title: Work
 background: /assets/img/background.png
 ---
 
 <header class="title">
-	Projects
+	Work
 </header>
+
+<div class="gallery">
+	<div class="item">
+		<img src="/">
+		<span></span>
+	</div>
+</div>
